--- a/gridSystem/BS_Grid_System.html
+++ b/gridSystem/BS_Grid_System.html
@@ -90,7 +90,7 @@
 
 	<div class="row mt-5">
 		<div class="col-12 col-sm-3 col-md-4 col-lg-4 col-xl-6">
-			<h3>A.R.Aman</h3>
+			<h3>Esteham Hasan</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -100,7 +100,7 @@
 		</div>
 
 		<div class="col-12 col-sm-3 col-md-4 col-lg-6 col-xl-3">
-			<h3>A.R.Aman</h3>
+			<h3>Esteham Hasan</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -110,7 +110,7 @@
 		</div>
 
 		<div class="col-12 col-sm-6 col-md-4 col-lg-2 col-xl-3">
-			<h3>A.R.Aman</h3>
+			<h3>Esteham Hasan</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -128,7 +128,7 @@
 		</div>
 
 		<div class="col- col-md-6 col-lg-6 text-center">
-			&copy; Copyright by Cogent
+			&copy; Copyright by Spider
 		</div>
 
 		<div class="col- col-md-3 col-lg-3">
