--- a/gridSystem/BS_Pagination.html
+++ b/gridSystem/BS_Pagination.html
@@ -110,7 +110,7 @@
 </div>
 
 <footer class="bg-dark text-light text-center py-3">
-	&copy; cogent | All Rights Reserved
+	&copy; Spider | All Rights Reserved
 </footer>
 
 
